# nox13-interserver

./: Makefile.in  README  README.md  README.md~  aclocal.m4  configure  configure.ac  configure.ac.in
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2  traces.3
doc/: Makefile.in
doc/doxygen/: Makefile.in
doc/manual/: Makefile.in
man/: Makefile.in
man/man1/: Makefile.in
man/man5/: Makefile.in
src/builtin/: Makefile.in
src/etc/: Makefile.in
src/include/: Makefile.in
src/nox/coreapps/hub/: Makefile.in
src/nox/coreapps/interserver/: Makefile  Makefile.am  Makefile.in  facade_answer.cc  facade_answer.hh  http_event.cc  http_event.hh  inter_sw_config.cc  inter_sw_config.hh  interact_answer.cc  interact_answer.hh  interact_builders.cc  interact_builders.hh  interact_event.cc  interact_event.hh  interact_hreplies.cc  interact_hreplies.hh  interact_reply_event.cc  interact_reply_event.hh  interactor.hh  interserver.cc  interserver.cc~  interserver.hh  meta.json  meta.json~  msg_resolver.cc  msg_resolver.hh  request_processor.cc  request_processor.hh
src/nox/coreapps/messenger/: Makefile.in  messenger_core.cc
src/nox/coreapps/switch/: Makefile.in  switch.cc
src/nox/coreapps/testharness/: Makefile.in
src/nox/netapps/: Makefile.in
src/nox/netapps/discovery/: Makefile.in
src/oflib/: Makefile.in
src/oflib-exp/: Makefile.in
